Feat(icons): Add icons and links to the Arenart

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -72,6 +72,9 @@
 						<i class="fab fa-instagram"></i>
 					</a>
 				</li>
+				<li>
+					<div class="footer-arenart" routerLink="arenart"></div>
+				</li>
 			</ul>
 		</div>
 	</div>
