--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -160,6 +160,7 @@
 				margin: 2px;
 				background-size: cover;
 				background-image: url("/assets/images/icon_list.png");
+				cursor: pointer;
 
 				&:hover {
 					background-image: url("/assets/images/icon_list_hover.png");
