--- a/src/app/pages/arenart/arenart.component.html
+++ b/src/app/pages/arenart/arenart.component.html
@@ -18,11 +18,13 @@
 			<img src="/assets/images/arenart/title.png" alt=""/>
 			<p>
 					L'Arenart est un jeu de combat sur plateformes, entre deux joueurs sur un seul et même ordinateur.<br/>
-					Chaque joueur incarne un personnage ou l'avatar d'un artiste, en fonction des pouvoirs qu'ils veut utiliser, et le combat commence !
+					Chaque joueur incarne un personnage ou l'avatar d'un artiste, en fonction des pouvoirs qu'il veut utiliser, et le combat commence !
 			</p><p>
 					Le but est d'être le premier à atteindre le score de 3 points : lorsqu'un joueur n'a plus de vie, le joueur adverse gagne 1 point. Et pour infliger plus de dégats, il faut diminuer la résistance de l'adversaire !
 			</p><p>
 					Vous pouvez incarner mon avatar, celui de <a href="https://www.facebook.com/CDunklayth" target="_blank">Dunklayth</a> ou de <a href="https://www.facebook.com/krizaliedart" target="_blank">Kriza Lied</a>, le personnage Apkareru de Belvelyn, ou encore Ilana d'<a href="https://www.facebook.com/AethelArts" target="_blank">Aethel</a>.
+			</p><p>
+				<em>L'Arenart (Arène-Art) a été crée durant deux étés (2016 et 2017) sur Unity, pour mettre en valeur<br/>les artistes et leur univers tout en s'amusant !</em>
 			</p>
 			<iframe height="360" width="640" allow="accelerometer; autoplay; encrypted-media; gyroscope" src="https://www.youtube.com/embed/9u3umbVtPOw" allowfullscreen></iframe>
 			<button (click)="launchGame()">JOUER</button>
