Refactor(religion): Change link between divinities, and add another statuts (incompleted for now)

--- a/src/app/pages/universe/crystals/crystals.component.html
+++ b/src/app/pages/universe/crystals/crystals.component.html
@@ -24,7 +24,8 @@
 			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.05' | translate }}<br>
 			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.06' | translate }}<br>
 			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.07' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.08' | translate }}
+			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.08' | translate }}<br>
+			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.09' | translate }}
 		</p>
 	</div>
 </div>
