Refactor : Add modifciation to the lore of the religion

--- a/src/app/pages/universe/religion/religion.component.html
+++ b/src/app/pages/universe/religion/religion.component.html
@@ -31,7 +31,8 @@
 	</div>
 	<div class="religion-description">
 		<h4>{{ entityKabal | uppercase }}</h4>
-		<h2>{{ entityTitle }}<br>/ {{ entitySubtitle }}</h2>
+		<h2>{{ entityTitle }}</h2>
+		<h4>{{ entitySubtitle | uppercase }}</h4>
 		<p>"{{ entityComment }}"<br>- {{ entityCommentName }}</p>
 	</div>
 	<div class="religion-list">
