--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -16,9 +16,13 @@
 <div class="creation-container big import">
 	<h2>{{ "CREATION.MENU.IMPORT" | translate }}</h2>
 	<p innerHtml="{{ 'CREATION.PRETIRES' | translate }}"></p>
-	<a href="./assets/files/Persos_Pretires.zip" download>{{ "ROLEPLAY.FILES.PERSOSPRETIRES" | translate }}</a>
+	<a href="./assets/files/Persos_Pretires.zip" download>{{
+		"ROLEPLAY.FILES.PERSOSPRETIRES" | translate
+	}}</a>
 	<p innerHtml="{{ 'CREATION.IMPORT' | translate }}"></p>
-	<label for="creation-load-parameters">{{ "ROLEPLAY.FILES.PERSOSPARAMETERS" | translate }}</label>
+	<label for="creation-load-parameters">{{
+		"ROLEPLAY.FILES.PERSOSPARAMETERS" | translate
+	}}</label>
 	<input
 		type="file"
 		id="creation-load-parameters"
@@ -70,7 +74,11 @@
 			alt=""
 		/>
 		<div class="dropdown">
-			<select class="dropdown-select" value="{{ race }}" (change)="changeRace($event.target)">
+			<select
+				class="dropdown-select"
+				value="{{ race }}"
+				(change)="changeRace($event.target)"
+			>
 				<option value="1">{{
 					"UNIVERSE.POPULATION.PEOPLE1.NAME" | translate
 				}}</option>
@@ -208,7 +216,10 @@
 <div class="creation-container big">
 	<h2>{{ "CREATION.MENU.TITLE03" | translate }}</h2>
 	<p innerHtml="{{ 'CREATION.SKILLS.TEXT01' | translate }}"></p>
-	<p class="creation-points" innerHtml="{{ 'CREATION.SKILLS.TEXT02' | translate }}"></p>
+	<p
+		class="creation-points"
+		innerHtml="{{ 'CREATION.SKILLS.TEXT02' | translate }}"
+	></p>
 	<p innerHtml="{{ 'CREATION.SKILLS.TEXT03' | translate }}"></p>
 	<p [ngClass]="{ warning: leftPointsSkills < 0 }" class="creation-points">
 		{{ "CREATION.INDICS.LEFTPOINTS" | translate }} :
@@ -218,20 +229,6 @@
 		<div class="creation-skills">
 			<table>
 				<tbody>
-					<creation-slider
-						hasSpecialistic="true"
-						specialistics="{{ 'CREATION.ANIMAUX.SPECIALISTICS' | translate }}"
-						min="{{ race === 3 ? 1 : 0 }}"
-						max="10"
-						name="{{ 'CREATION.ANIMAUX.NAME' | translate }}"
-						help="{{ 'CREATION.ANIMAUX.HELP' | translate }}"
-						type="animaux"
-						value="{{ mainSkills.animaux.value }}"
-						spe="{{ mainSkills.animaux.spe }}"
-						(onOpenPopup)="openPopup($event)"
-						(onValueChange)="changeMainSkills($event)"
-						(onSpeChange)="changeSpeMainSkills($event)"
-					></creation-slider>
 					<creation-slider
 						hasSpecialistic="true"
 						specialistics="{{ 'CREATION.ART.SPECIALISTICS' | translate }}"
@@ -251,7 +248,7 @@
 						specialistics="{{
 							'CREATION.ATHLETISME.SPECIALISTICS' | translate
 						}}"
-						min="{{ race === 1 ? 1 : 0 }}"
+						min="0"
 						max="10"
 						name="{{ 'CREATION.ATHLETISME.NAME' | translate }}"
 						help="{{ 'CREATION.ATHLETISME.HELP' | translate }}"
@@ -265,7 +262,7 @@
 					<creation-slider
 						hasSpecialistic="true"
 						specialistics="{{ 'CREATION.COMBAT.SPECIALISTICS' | translate }}"
-						min="{{ race === 3 || race === 6 ? 1 : 0 }}"
+						min="0"
 						max="10"
 						name="{{ 'CREATION.COMBAT.NAME' | translate }}"
 						help="{{ 'CREATION.COMBAT.HELP' | translate }}"
@@ -279,43 +276,13 @@
 					<creation-slider
 						hasSpecialistic="true"
 						specialistics="{{ 'CREATION.FURTIVITE.SPECIALISTICS' | translate }}"
-						min="{{ race === 4 ? 1 : 0 }}"
+						min="0"
 						max="10"
 						name="{{ 'CREATION.FURTIVITE.NAME' | translate }}"
 						help="{{ 'CREATION.FURTIVITE.HELP' | translate }}"
 						type="furtivite"
 						value="{{ mainSkills.furtivite.value }}"
 						spe="{{ mainSkills.furtivite.spe }}"
-						(onOpenPopup)="openPopup($event)"
-						(onValueChange)="changeMainSkills($event)"
-						(onSpeChange)="changeSpeMainSkills($event)"
-					></creation-slider>
-					<creation-slider
-						hasSpecialistic="true"
-						specialistics="{{
-							'CREATION.INFORMATION.SPECIALISTICS' | translate
-						}}"
-						min="0"
-						max="10"
-						name="{{ 'CREATION.INFORMATION.NAME' | translate }}"
-						help="{{ 'CREATION.INFORMATION.HELP' | translate }}"
-						type="information"
-						value="{{ mainSkills.information.value }}"
-						spe="{{ mainSkills.information.spe }}"
-						(onOpenPopup)="openPopup($event)"
-						(onValueChange)="changeMainSkills($event)"
-						(onSpeChange)="changeSpeMainSkills($event)"
-					></creation-slider>
-					<creation-slider
-						hasSpecialistic="true"
-						specialistics="{{ 'CREATION.INTUITION.SPECIALISTICS' | translate }}"
-						min="{{ race === 5 || race === 6 ? 1 : 0 }}"
-						max="10"
-						name="{{ 'CREATION.INTUITION.NAME' | translate }}"
-						help="{{ 'CREATION.INTUITION.HELP' | translate }}"
-						type="intuition"
-						value="{{ mainSkills.intuition.value }}"
-						spe="{{ mainSkills.intuition.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -328,54 +295,8 @@
 				<tbody>
 					<creation-slider
 						hasSpecialistic="true"
-						specialistics="{{
-							'CREATION.INVESTIGATION.SPECIALISTICS' | translate
-						}}"
-						min="0"
-						max="10"
-						name="{{ 'CREATION.INVESTIGATION.NAME' | translate }}"
-						help="{{ 'CREATION.INVESTIGATION.HELP' | translate }}"
-						type="investigation"
-						value="{{ mainSkills.investigation.value }}"
-						spe="{{ mainSkills.investigation.spe }}"
-						(onOpenPopup)="openPopup($event)"
-						(onValueChange)="changeMainSkills($event)"
-						(onSpeChange)="changeSpeMainSkills($event)"
-					></creation-slider>
-					<creation-slider
-						hasSpecialistic="true"
-						specialistics="{{ 'CREATION.LARCIN.SPECIALISTICS' | translate }}"
-						min="0"
-						max="10"
-						name="{{ 'CREATION.LARCIN.NAME' | translate }}"
-						help="{{ 'CREATION.LARCIN.HELP' | translate }}"
-						type="larcin"
-						value="{{ mainSkills.larcin.value }}"
-						spe="{{ mainSkills.larcin.spe }}"
-						(onOpenPopup)="openPopup($event)"
-						(onValueChange)="changeMainSkills($event)"
-						(onSpeChange)="changeSpeMainSkills($event)"
-					></creation-slider>
-					<creation-slider
-						hasSpecialistic="true"
-						specialistics="{{
-							'CREATION.MANIPULATION.SPECIALISTICS' | translate
-						}}"
-						min="{{ race === 4 ? 1 : 0 }}"
-						max="10"
-						name="{{ 'CREATION.MANIPULATION.NAME' | translate }}"
-						help="{{ 'CREATION.MANIPULATION.HELP' | translate }}"
-						type="manipulation"
-						value="{{ mainSkills.manipulation.value }}"
-						spe="{{ mainSkills.manipulation.spe }}"
-						(onOpenPopup)="openPopup($event)"
-						(onValueChange)="changeMainSkills($event)"
-						(onSpeChange)="changeSpeMainSkills($event)"
-					></creation-slider>
-					<creation-slider
-						hasSpecialistic="true"
 						specialistics="{{ 'CREATION.MEDECINE.SPECIALISTICS' | translate }}"
-						min="{{ race === 5 ? 1 : 0 }}"
+						min="0"
 						max="10"
 						name="{{ 'CREATION.MEDECINE.NAME' | translate }}"
 						help="{{ 'CREATION.MEDECINE.HELP' | translate }}"
@@ -389,15 +310,15 @@
 					<creation-slider
 						hasSpecialistic="true"
 						specialistics="{{
-							'CREATION.PERSUASION.SPECIALISTICS' | translate
+							'CREATION.PERCEPTION.SPECIALISTICS' | translate
 						}}"
 						min="0"
 						max="10"
-						name="{{ 'CREATION.PERSUASION.NAME' | translate }}"
-						help="{{ 'CREATION.PERSUASION.HELP' | translate }}"
-						type="persuasion"
-						value="{{ mainSkills.persuasion.value }}"
-						spe="{{ mainSkills.persuasion.spe }}"
+						name="{{ 'CREATION.PERCEPTION.NAME' | translate }}"
+						help="{{ 'CREATION.PERCEPTION.HELP' | translate }}"
+						type="perception"
+						value="{{ mainSkills.perception.value }}"
+						spe="{{ mainSkills.perception.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
@@ -418,119 +339,20 @@
 					></creation-slider>
 					<creation-slider
 						hasSpecialistic="true"
-						specialistics="{{ 'CREATION.SURVIE.SPECIALISTICS' | translate }}"
-						min="{{ race === 6 ? 1 : 0 }}"
+						specialistics="{{ 'CREATION.SOCIAL.SPECIALISTICS' | translate }}"
+						min="0"
 						max="10"
-						name="{{ 'CREATION.SURVIE.NAME' | translate }}"
-						help="{{ 'CREATION.SURVIE.HELP' | translate }}"
-						type="survie"
-						value="{{ mainSkills.survie.value }}"
-						spe="{{ mainSkills.survie.spe }}"
+						name="{{ 'CREATION.SOCIAL.NAME' | translate }}"
+						help="{{ 'CREATION.SOCIAL.HELP' | translate }}"
+						type="social"
+						value="{{ mainSkills.social.value }}"
+						spe="{{ mainSkills.social.spe }}"
 						(onOpenPopup)="openPopup($event)"
 						(onValueChange)="changeMainSkills($event)"
 						(onSpeChange)="changeSpeMainSkills($event)"
 					></creation-slider>
 				</tbody>
 			</table>
-		</div>
-	</div>
-	<p innerHtml="{{ 'CREATION.SKILLS.TEXT04' | translate }}"></p>
-	<p [ngClass]="{ warning: leftPointsSkills < 0 }" class="creation-points">
-		{{ "CREATION.INDICS.LEFTPOINTS" | translate }} :
-		<b>{{ leftPointsCrystalSkills }}</b>
-	</p>
-	<div class="creation-flex">
-		<div class="creation-flex">
-			<div class="creation-skills">
-				<table>
-					<tbody>
-						<creation-slider
-							hasCristalSpecialistic="true"
-							min="0"
-							max="10"
-							name="{{ 'CREATION.ELEMENTAIRES.NAME' | translate }}"
-							help="{{ 'CREATION.ELEMENTAIRES.HELP' | translate }}"
-							type="elementaires"
-							value="{{ crystalSkills.elementaires.value }}"
-							spe="{{ crystalSkills.elementaires.spe }}"
-							(onOpenPopup)="openPopup($event)"
-							(onValueChange)="changeCrystalSkills($event)"
-							(onSpeChange)="changeSpeCrystalSkills($event)"
-						></creation-slider>
-						<creation-slider
-							hasCristalSpecialistic="true"
-							min="0"
-							max="10"
-							name="{{ 'CREATION.INVOCATIONS.NAME' | translate }}"
-							help="{{ 'CREATION.INVOCATIONS.HELP' | translate }}"
-							type="invocations"
-							value="{{ crystalSkills.invocations.value }}"
-							spe="{{ crystalSkills.invocations.spe }}"
-							(onOpenPopup)="openPopup($event)"
-							(onValueChange)="changeCrystalSkills($event)"
-							(onSpeChange)="changeSpeCrystalSkills($event)"
-						></creation-slider>
-						<creation-slider
-							hasCristalSpecialistic="true"
-							min="0"
-							max="10"
-							name="{{ 'CREATION.MENTAUX.NAME' | translate }}"
-							help="{{ 'CREATION.MENTAUX.HELP' | translate }}"
-							type="mentaux"
-							value="{{ crystalSkills.mentaux.value }}"
-							spe="{{ crystalSkills.mentaux.spe }}"
-							(onOpenPopup)="openPopup($event)"
-							(onValueChange)="changeCrystalSkills($event)"
-							(onSpeChange)="changeSpeCrystalSkills($event)"
-						></creation-slider>
-					</tbody>
-				</table>
-			</div>
-			<div class="creation-skills">
-				<table>
-					<tbody>
-						<creation-slider
-							hasCristalSpecialistic="true"
-							min="0"
-							max="10"
-							name="{{ 'CREATION.TRANSFORMATIONS.NAME' | translate }}"
-							help="{{ 'CREATION.TRANSFORMATIONS.HELP' | translate }}"
-							type="transformations"
-							value="{{ crystalSkills.transformations.value }}"
-							spe="{{ crystalSkills.transformations.spe }}"
-							(onOpenPopup)="openPopup($event)"
-							(onValueChange)="changeCrystalSkills($event)"
-							(onSpeChange)="changeSpeCrystalSkills($event)"
-						></creation-slider>
-						<creation-slider
-							hasCristalSpecialistic="true"
-							min="0"
-							max="10"
-							name="{{ 'CREATION.SPATIAUXTEMPORELS.NAME' | translate }}"
-							help="{{ 'CREATION.SPATIAUXTEMPORELS.HELP' | translate }}"
-							type="spatiauxtemporels"
-							value="{{ crystalSkills.spatiauxtemporels.value }}"
-							spe="{{ crystalSkills.spatiauxtemporels.spe }}"
-							(onOpenPopup)="openPopup($event)"
-							(onValueChange)="changeCrystalSkills($event)"
-							(onSpeChange)="changeSpeCrystalSkills($event)"
-						></creation-slider>
-						<creation-slider
-							hasCristalSpecialistic="true"
-							min="0"
-							max="10"
-							name="{{ 'CREATION.SPECIAUX.NAME' | translate }}"
-							help="{{ 'CREATION.SPECIAUX.HELP' | translate }}"
-							type="speciaux"
-							value="{{ crystalSkills.speciaux.value }}"
-							spe="{{ crystalSkills.speciaux.spe }}"
-							(onOpenPopup)="openPopup($event)"
-							(onValueChange)="changeCrystalSkills($event)"
-							(onSpeChange)="changeSpeCrystalSkills($event)"
-						></creation-slider>
-					</tbody>
-				</table>
-			</div>
 		</div>
 	</div>
 </div>
@@ -609,7 +431,11 @@
 			<tbody>
 				<tr>
 					<td>
-						<input type="text" value="{{ crystal01.name }}" (change)="changeCrystalName(1, $event.target)" />
+						<input
+							type="text"
+							value="{{ crystal01.name }}"
+							(change)="changeCrystalName(1, $event.target)"
+						/>
 					</td>
 					<td>
 						<div class="dropdown">
@@ -646,7 +472,11 @@
 				</tr>
 				<tr>
 					<td>
-						<input value="{{ crystal02.name }}" type="text" (change)="changeCrystalName(2, $event.target)" />
+						<input
+							value="{{ crystal02.name }}"
+							type="text"
+							(change)="changeCrystalName(2, $event.target)"
+						/>
 					</td>
 					<td>
 						<div class="dropdown">
@@ -683,7 +513,11 @@
 				</tr>
 				<tr>
 					<td>
-						<input value="{{ crystal03.name }}" type="text" (change)="changeCrystalName(3, $event.target)" />
+						<input
+							value="{{ crystal03.name }}"
+							type="text"
+							(change)="changeCrystalName(3, $event.target)"
+						/>
 					</td>
 					<td>
 						<div class="dropdown">
@@ -727,26 +561,6 @@
 	<div class="creation-container right">
 		<h2>{{ "CREATION.MENU.TITLE05" | translate }}</h2>
 		<p innerHtml="{{ 'CREATION.EQUIPEMENT.TEXT' | translate }}"></p>
-		<button class="creation-help-equipment" (click)="openPopup()">?</button>
-		<div>
-			<span>{{ "CREATION.INDICS.ARMOR" | translate }} : </span>
-			<div class="dropdown">
-				<select class="dropdown-select" value="{{ armor.id }}" (change)="changeArmor($event.target)">
-					<option *ngFor="let a of listArmors" value="{{ a.id }}">{{
-						a.name
-					}}</option>
-				</select>
-			</div>
-			<p
-				innerHtml="{{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{
-					armor.defenceBonus
-				}}<br>{{ 'CREATION.INDICS.MOBILITY' | translate }} : {{
-					armor.mobility
-				}}<br>{{ 'CREATION.INDICS.ACTIONSMALUS' | translate }} : {{
-					armor.actionsMalus
-				}}"
-			></p>
-		</div>
 		<div>
 			<span>{{ "CREATION.INDICS.WEAPON" | translate }} : </span>
 			<div class="dropdown">
@@ -762,23 +576,7 @@
 				</select>
 			</div>
 			<p
-				innerHtml="{{ 'CREATION.INDICS.ATTACKBONUS' | translate }} : {{
-					weapon01.attackBonus || '-'
-				}}<br>{{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{
-					weapon01.attackBonus || '-'
-				}}<br>{{ 'CREATION.INDICS.MOBILITY' | translate }} : {{
-					weapon01.mobility || '-'
-				}}<br>{{ 'CREATION.INDICS.ACTIONSMALUS' | translate }} : {{
-					weapon01.actionsMalus || '-'
-				}}<br>{{ 'CREATION.INDICS.CATEGORY' | translate }} : {{
-					weapon01.category || '-'
-				}}<br>{{ 'CREATION.INDICS.COUNT' | translate }} : {{
-					weapon01.count || '-'
-				}}<br>{{ 'CREATION.INDICS.COOLDOWN' | translate }} : {{
-					weapon01.cooldown || '-'
-				}}<br>{{ 'CREATION.INDICS.ZONE' | translate }} : {{
-					weapon01.zone || '-'
-				}}"
+				innerHtml="{{ 'CREATION.INDICS.ATTACKBONUS' | translate }} : {{	weapon01.attackBonus || '-'	}} / {{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{	weapon01.attackBonus || '-'	}}"
 			></p>
 		</div>
 		<div>
@@ -798,20 +596,28 @@
 			<p
 				innerHtml="{{ 'CREATION.INDICS.ATTACKBONUS' | translate }} : {{
 					weapon02.attackBonus || '-'
-				}}<br>{{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{
+				}} / {{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{
 					weapon02.attackBonus || '-'
-				}}<br>{{ 'CREATION.INDICS.MOBILITY' | translate }} : {{
-					weapon02.mobility || '-'
-				}}<br>{{ 'CREATION.INDICS.ACTIONSMALUS' | translate }} : {{
-					weapon02.actionsMalus || '-'
-				}}<br>{{ 'CREATION.INDICS.CATEGORY' | translate }} : {{
-					weapon02.category || '-'
-				}}<br>{{ 'CREATION.INDICS.COUNT' | translate }} : {{
-					weapon02.count || '-'
-				}}<br>{{ 'CREATION.INDICS.COOLDOWN' | translate }} : {{
-					weapon02.cooldown || '-'
-				}}<br>{{ 'CREATION.INDICS.ZONE' | translate }} : {{
-					weapon02.zone || '-'
+				}}"
+			></p>
+		</div>
+
+		<div>
+			<span>{{ "CREATION.INDICS.ARMOR" | translate }} : </span>
+			<div class="dropdown">
+				<select
+					class="dropdown-select"
+					value="{{ armor.id }}"
+					(change)="changeArmor($event.target)"
+				>
+					<option *ngFor="let a of listArmors" value="{{ a.id }}">{{
+						a.name
+					}}</option>
+				</select>
+			</div>
+			<p
+				innerHtml="{{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{
+					armor.defenceBonus
 				}}"
 			></p>
 		</div>
@@ -826,7 +632,11 @@
 		<div class="creation-identity left">
 			<p innerHtml="{{ 'CREATION.IDENTITY.TEXT' | translate }}"></p>
 			<span>Nom du personnage</span>
-			<input type="text" value="{{ name }}" (change)="changeName($event.target)" />
+			<input
+				type="text"
+				value="{{ name }}"
+				(change)="changeName($event.target)"
+			/>
 			<span>Description / histoire du personnage (max : 440 caract.)</span>
 			<textarea
 				value="{{ description }}"
@@ -837,18 +647,10 @@
 		<div class="creation-identity right">
 			<span>Avatar du personnage</span>
 			<label for="avatar" class="creation-avatar">
-				<span *ngIf="!avatar"
-					>Importer une image<br />(ratio 1:1 | JPG, PNG | max 2Mo)</span
-				>
+				<span *ngIf="!avatar">Importer une image<br />(ratio 1:1 | JPG, PNG | max 2Mo)</span>
 				<img *ngIf="avatar" alt="" [src]="avatar" />
 			</label>
-			<input
-				type="file"
-				name="avatar"
-				id="avatar"
-				accept="image/png, image/jpeg"
-				(change)="changeAvatar($event.target)"
-			/>
+			<input type="file" name="avatar" id="avatar" accept="image/png, image/jpeg" (change)="changeAvatar($event.target)" />
 		</div>
 	</div>
 </div>
@@ -859,5 +661,5 @@
 	<h2>{{ "CREATION.MENU.CONCLUSION" | translate }}</h2>
 	<p class="creation-points warning" innerHtml="{{ listWarnings }}"></p>
 	<a id="creation-save-pdf" (click)="downloadPDF()">Télécharger la fiche de personnage</a>
-	<a id ="creation-save-parameters" (click)="downloadJSON()">Sauvegarder les paramètres du personnage</a>
+	<a id="creation-save-parameters" (click)="downloadJSON()">Sauvegarder les paramètres du personnage</a>
 </div>
