--- a/src/app/pages/roleplay/creation/creation.component.scss
+++ b/src/app/pages/roleplay/creation/creation.component.scss
@@ -1,200 +1,184 @@
 @import "../../../../styles/variables.scss";
 
 :host {
+  .creation-flex {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 
-	.creation-flex {
-		display: flex;
-		flex-direction: row;
-		width: 100%;
+    @media screen and (max-width: 1200px) {
+      flex-direction: column;
+    }
+  }
 
-		@media screen and (max-width: 1200px) {
-			flex-direction: column;
-		}
-	}
+  .creation-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    padding: 25px 0;
+    border-top: 6px solid $secondary-color;
+    background-position: center;
+    background-size: cover;
+    background-image: linear-gradient(-45deg, rgba($dark-color, 1), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5)),
+      url("/assets/images/home_02.png");
 
-	.creation-container {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-		align-items: center;
-		width: 50%;
-		padding: 25px 0;
-		border-top: 6px solid $secondary-color;
-		background-position: center;
-		background-size: cover;
-		background-image: linear-gradient(
-				-45deg,
-				rgba($dark-color, 1),
-				rgba($dark-color, 0.75),
-				rgba($dark-color, 0.5),
-				rgba($primary-color, 0.5),
-				rgba($primary-color, 0.5)
-			),
-			url("/assets/images/home_02.png");
+    @media screen and (max-width: 1200px) {
+      width: 100%;
+    }
 
-		@media screen and (max-width: 1200px) {
-			width: 100%;
-		}
+    &.big {
+      width: 100%;
+    }
 
-		&.big {
-			width: 100%;
-		}
+    &.left {
+      border-right: 2px solid $secondary-color;
 
-		&.left {
-			border-right: 2px solid $secondary-color;
+      @media screen and (max-width: 1200px) {
+        border-right: none;
+        border-top: 6px solid $secondary-color;
+      }
+    }
 
-			@media screen and (max-width: 1200px) {
-				border-right: none;
-				border-top: 6px solid $secondary-color;
-			}
-		}
+    &.right {
+      border-left: 2px solid $secondary-color;
 
-		&.right {
-			border-left: 2px solid $secondary-color;
+      @media screen and (max-width: 1200px) {
+        border-left: none;
+        border-top: 6px solid $secondary-color;
+      }
+    }
 
-			@media screen and (max-width: 1200px) {
-				border-left: none;
-				border-top: 6px solid $secondary-color;
-			}
-		}
+    &.import {
+      background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8)), url("/assets/images/home_02.png");
 
-		&.import {
-			background-image: linear-gradient(
-				0deg,
-				rgba($dark-color, 0.8),
-				rgba($dark-color, 0.8)
-			),
-			url("/assets/images/home_02.png");
+      p {
+        text-align: center;
+      }
 
-			p {
-				text-align: center;
-			}
+      a,
+      label {
+        padding: 5px 15px;
+        border-radius: 5px;
+        cursor: pointer;
+        outline: none;
+        background: none;
+        border: 1px solid #dad090;
+        color: #fcf8b0;
+      }
+    }
 
-			a, label {
-				padding: 5px 15px;
-				border-radius: 5px;
-				cursor: pointer;
-				outline: none;
-				background: none;
-				border: 1px solid #dad090;
-				color: #fcf8b0;
-			}
-		}
+    &.final {
+      background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8)), url("/assets/images/home_02.png");
+    }
+  }
 
-		&.final {
-			background-image: linear-gradient(
-				0deg,
-				rgba($dark-color, 0.8),
-				rgba($dark-color, 0.8)
-			),
-			url("/assets/images/home_02.png");
-		}
-	}
+  .creation-race-img {
+    height: 200px;
+    width: 200px;
+    margin: 10px;
+    border-radius: 50%;
+    border: 2px solid $light-secondary-color;
+  }
 
-	.creation-race-img {
-		height: 200px;
-		width: 200px;
-		margin: 10px;
-		border-radius: 50%;
-		border: 2px solid $light-secondary-color;
-	}
+  .creation-crystal-table {
+    @media screen and (max-width: 700px) {
+      display: none;
+    }
+  }
 
-	.creation-crystal-table {
-		@media screen and (max-width: 700px) {
-			display: none;
-		}
-	}
+  .creation-crystal-mobile-table {
+    display: none;
 
-	.creation-crystal-mobile-table {
-		display: none;
+    @media screen and (max-width: 700px) {
+      display: block;
+    }
+  }
 
-		@media screen and (max-width: 700px) {
-			display: block;
-		}
-	}
+  .creation-points {
+    margin-top: 0;
+    text-align: center;
+  }
 
-	.creation-points {
-		margin-top: 0;
-		text-align: center;
-	}
+  .creation-skills {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
 
-	.creation-skills {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		width : 50%;
+    @media screen and (max-width: 1200px) {
+      width: 100%;
+    }
+  }
 
-		@media screen and (max-width: 1200px) {
-			width : 100%;
-		}
-	}
+  .creation-help-equipment {
+    @media screen and (max-width: 700px) {
+      display: none;
+    }
+  }
 
-	.creation-help-equipment {
-		@media screen and (max-width: 700px) {
-			display : none;
-		}
-	}
+  .creation-identity {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-	.creation-identity {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+    &.left {
+      width: 65%;
 
-		&.left {
-			width : 65%;
+      @media screen and (max-width: 1200px) {
+        width: 100%;
+      }
+    }
 
-			@media screen and (max-width: 1200px) {
-				width : 100%;
-			}
-		}
+    &.right {
+      width: 35%;
 
-		&.right {
-			width : 35%;
+      @media screen and (max-width: 1200px) {
+        width: 100%;
+      }
+    }
+  }
 
-			@media screen and (max-width: 1200px) {
-				width : 100%;
-			}
-		}
-	}
+  .creation-avatar {
+    height: 250px;
+    width: 250px;
+    border: 1px solid $secondary-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
 
-	.creation-avatar {
-		height: 250px;
-		width: 250px;
-		border: 1px solid $secondary-color;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		text-align: center;
-		cursor: pointer;
+    img {
+      height: 250px;
+      width: 250px;
+    }
+  }
 
-		img {
-			height: 250px;
-			width: 250px;
-		}
-	}
+  #creation-save-pdf,
+  #creation-save-parameters {
+    margin: 10px 0;
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+    background: none;
+    border: 1px solid #dad090;
+    color: #fcf8b0;
+  }
 
-	#creation-save-pdf, #creation-save-parameters {
-		margin: 10px 0;
-		padding: 5px 15px;
-		border-radius: 5px;
-		cursor: pointer;
-		outline: none;
-		background: none;
-		border: 1px solid #dad090;
-		color: #fcf8b0;
-	}
+  h2 {
+    margin: 10px 0;
 
-	h2 {
-		margin: 10px 0;
+    @media screen and (max-width: 1200px) {
+      text-align: center;
+    }
+  }
 
-		@media screen and (max-width: 1200px) {
-			text-align: center;
-		}
-	}
-
-	p {
-		width: 90%;
-		text-align: justify;
-	}
+  p {
+    width: 90%;
+    text-align: justify;
+  }
 }
