--- a/src/app/pages/universe/crystals/crystals.component.html
+++ b/src/app/pages/universe/crystals/crystals.component.html
@@ -1,31 +1,35 @@
 <head-universe
-	title="{{ 'PAGE.CRYSTALS' | translate | uppercase }}"
-	section01="{{ 'UNIVERSE.CRYSTALS.SECTION01' | translate }}"
-	section02="{{ 'UNIVERSE.CRYSTALS.SECTION02' | translate }}"
-	section03="{{ 'UNIVERSE.CRYSTALS.SECTION03' | translate }}"
-	imgLeft="assets/images/crystals/crystals_left.png"
-	imgRight="assets/images/crystals/crystals_right.png">
+  title="{{ 'PAGE.CRYSTALS' | translate | uppercase }}"
+  section01="{{ 'UNIVERSE.CRYSTALS.SECTION01' | translate }}"
+  section02="{{ 'UNIVERSE.CRYSTALS.SECTION02' | translate }}"
+  section03="{{ 'UNIVERSE.CRYSTALS.SECTION03' | translate }}"
+  imgLeft="assets/images/crystals/crystals_left.png"
+  imgRight="assets/images/crystals/crystals_right.png"
+>
 </head-universe>
 <div class="crystal-container">
-	<div class="crystal-imgs">
-		<img class="crystal-main" src="assets/images/crystals/crystal.png" alt="">
-		<img class="crystal-data01" src="assets/images/crystals/crystal_data01.png" alt="">
-		<img class="crystal-data02" src="assets/images/crystals/crystal_data02.png" alt="">
-		<img class="crystal-data03" src="assets/images/crystals/crystal_data03.png" alt="">
-	</div>
-	<div class="crystal-text">
-		<h4>{{ 'UNIVERSE.CRYSTALS.PROPERTIES.SUBTITLE' | translate | uppercase }}</h4>
-		<h2>{{ 'UNIVERSE.CRYSTALS.PROPERTIES.TITLE' | translate | uppercase }}</h2>
-		<p>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.01' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.02' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.03' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.04' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.05' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.06' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.07' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.08' | translate }}<br>
-			- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.09' | translate }}
-		</p>
-	</div>
+  <div class="crystal-imgs">
+    <img class="crystal-main" src="assets/images/crystals/crystal.png" alt="" />
+    <img class="crystal-data01" src="assets/images/crystals/crystal_data01.png" alt="" />
+    <img class="crystal-data02" src="assets/images/crystals/crystal_data02.png" alt="" />
+    <img class="crystal-data03" src="assets/images/crystals/crystal_data03.png" alt="" />
+  </div>
+  <div class="crystal-text">
+    <h4>
+      {{ "UNIVERSE.CRYSTALS.PROPERTIES.SUBTITLE" | translate | uppercase }}
+    </h4>
+    <h2>{{ "UNIVERSE.CRYSTALS.PROPERTIES.TITLE" | translate | uppercase }}</h2>
+    <p>
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.01" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.02" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.03" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.04" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.05" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.06" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.07" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.08" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.09" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.10" | translate }}
+    </p>
+  </div>
 </div>
