--- a/src/app/pages/universe/crystals/crystals.component.scss
+++ b/src/app/pages/universe/crystals/crystals.component.scss
@@ -1,136 +1,126 @@
 @import "../../../../styles/variables.scss";
 
 :host {
-	.crystal-container {
-		position: relative;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		height: 550px;
+  .crystal-container {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 550px;
 
-		@media screen and (max-width: 1000px) {
-			flex-direction: column;
-			justify-content: normal;
-			height: auto;
-		}
+    @media screen and (max-width: 1000px) {
+      flex-direction: column;
+      justify-content: normal;
+      height: auto;
+    }
 
-		&::after {
-			content: "";
-			position: absolute;
-			opacity: 1;
-			top: 0;
-			left: 0;
-			bottom: 0;
-			right: 0;
-			z-index: -1;
+    &::after {
+      content: "";
+      position: absolute;
+      opacity: 1;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      z-index: -1;
 
-			background-position: center;
-			background-size: cover;
-			background-image: linear-gradient(
-					0deg,
-					rgba($dark-color, 0.8),
-					rgba($dark-color, 0.8),
-					rgba($dark-primary-color, 0.8),
-					rgba($dark-primary-color, 1)
-				),
-				url("/assets/images/home_01.png");
-		}
+      background-position: center;
+      background-size: cover;
+      background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8), rgba($dark-primary-color, 0.8), rgba($dark-primary-color, 1)), url("/assets/images/home_01.png");
+    }
 
-		.crystal-imgs {
-			position: relative;
-			margin: 0 auto;
-			height: 450px;
-			width: 450px;
+    .crystal-imgs {
+      position: relative;
+      margin: 0 auto;
+      height: 450px;
+      width: 450px;
 
-			@media screen and (max-width: 1000px) {
-				margin-top: 20px;
-				height: 350px;
-				width: 350px;
-			}
+      @media screen and (max-width: 1000px) {
+        margin-top: 20px;
+        height: 350px;
+        width: 350px;
+      }
 
-			img {
-				position: absolute;
-				height: 450px;
+      img {
+        position: absolute;
+        height: 450px;
 
-				@media screen and (max-width: 1000px) {
-					height: 350px;
-				}
-			}
+        @media screen and (max-width: 1000px) {
+          height: 350px;
+        }
+      }
 
-			.crystal-main {
-				animation: 3s infinite alternate animMain;
-			}
+      .crystal-main {
+        animation: 3s infinite alternate animMain;
+      }
 
-			.crystal-data01 {
-				opacity: 0;
-				animation: 3s infinite alternate animMain,
-					6s infinite alternate animData;
-			}
+      .crystal-data01 {
+        opacity: 0;
+        animation: 3s infinite alternate animMain, 6s infinite alternate animData;
+      }
 
-			.crystal-data02 {
-				opacity: 0;
-				animation: 3s infinite alternate animMain,
-					4s 2s infinite alternate animData;
-			}
+      .crystal-data02 {
+        opacity: 0;
+        animation: 3s infinite alternate animMain, 4s 2s infinite alternate animData;
+      }
 
-			.crystal-data03 {
-				opacity: 0;
-				animation: 3s infinite alternate animMain,
-					6s 4s infinite alternate animData;
-			}
+      .crystal-data03 {
+        opacity: 0;
+        animation: 3s infinite alternate animMain, 6s 4s infinite alternate animData;
+      }
 
-			@keyframes animMain {
-				from {
-					transform: translateY(0);
-				}
-				to {
-					transform: translateY(-50px);
-				}
-			}
+      @keyframes animMain {
+        from {
+          transform: translateY(0);
+        }
+        to {
+          transform: translateY(-50px);
+        }
+      }
 
-			@keyframes animData {
-				0% {
-					opacity: 0;
-				}
-				20% {
-					opacity: 0;
-				}
-				40% {
-					opacity: 0;
-				}
-				60% {
-					opacity: 1;
-				}
-				80% {
-					opacity: 1;
-				}
-				100% {
-					opacity: 1;
-				}
-			}
-		}
+      @keyframes animData {
+        0% {
+          opacity: 0;
+        }
+        20% {
+          opacity: 0;
+        }
+        40% {
+          opacity: 0;
+        }
+        60% {
+          opacity: 1;
+        }
+        80% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+    }
 
-		.crystal-text {
-			text-align: left;
-			width: 50%;
+    .crystal-text {
+      text-align: left;
+      width: 50%;
 
-			@media screen and (max-width: 1000px) {
-				margin-bottom: 20px;
-				width: 80%;
-			}
+      @media screen and (max-width: 1000px) {
+        margin-bottom: 20px;
+        width: 80%;
+      }
 
-			p {
-				font-size: 14px;
-				color: $secondary-color;
-				margin: 0;
-				padding: 4px 30px 4px 0;
-				font-style: italic;
+      p {
+        font-size: 14px;
+        color: $secondary-color;
+        margin: 0;
+        padding: 4px 30px 4px 0;
+        font-style: italic;
 
-				@media screen and (max-width: 1000px) {
-					padding: 0;
-				}
-			}
-		}
-	}
+        @media screen and (max-width: 1000px) {
+          padding: 0;
+        }
+      }
+    }
+  }
 }
