--- a/src/app/pages/roleplay/creation/creation.component.scss
+++ b/src/app/pages/roleplay/creation/creation.component.scss
@@ -65,9 +65,10 @@
 
     a,
     label {
-      margin: 10px 0;
+      margin: 10px;
       padding: 5px 15px;
       border-radius: 5px;
+      text-align: center;
       cursor: pointer;
       outline: none;
       background: none;
@@ -82,6 +83,14 @@
     margin: 10px;
     border-radius: 50%;
     border: 2px solid $light-secondary-color;
+  }
+
+  .creation-crystal-tables {
+    display: flex;
+
+    @media screen and (max-width: 700px) {
+      flex-direction: column;
+    }
   }
 
   .creation-crystal-table {
@@ -127,7 +136,7 @@
     align-items: center;
 
     &.left {
-      width: 65%;
+      width: 55%;
 
       @media screen and (max-width: 1200px) {
         width: 100%;
@@ -135,7 +144,7 @@
     }
 
     &.right {
-      width: 35%;
+      width: 45%;
 
       @media screen and (max-width: 1200px) {
         width: 100%;
