--- a/src/app/pages/roleplay/creation/creation.component.scss
+++ b/src/app/pages/roleplay/creation/creation.component.scss
@@ -155,6 +155,8 @@
   .creation-avatar {
     height: 200px;
     width: 200px;
+    margin: 0 10px !important;
+    padding: 0 !important;
     border: 1px solid $secondary-color;
     display: flex;
     align-items: center;
@@ -165,6 +167,7 @@
     img {
       height: 200px;
       width: 200px;
+      border-radius: 5px;
     }
   }
 
