--- a/src/app/pages/universe/crystals/crystals.component.html
+++ b/src/app/pages/universe/crystals/crystals.component.html
@@ -29,7 +29,10 @@
       - {{ "UNIVERSE.CRYSTALS.PROPERTIES.07" | translate }}<br />
       - {{ "UNIVERSE.CRYSTALS.PROPERTIES.08" | translate }}<br />
       - {{ "UNIVERSE.CRYSTALS.PROPERTIES.09" | translate }}<br />
-      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.10" | translate }}
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.10" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.11" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.12" | translate }}<br />
+      - {{ "UNIVERSE.CRYSTALS.PROPERTIES.13" | translate }}
     </p>
   </div>
 </div>
