--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -379,7 +379,6 @@
           <option *ngFor="let a of listArmors" value="{{ a.id }}">{{ a.name }}</option>
         </select>
       </div>
-      <span innerHtml="{{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{ armor.defenceBonus }}"></span>
     </div>
     <div class="creation-element">
       <span>{{ "CREATION.INDICS.WEAPON" | translate }} : </span>
@@ -389,19 +388,15 @@
           <option *ngFor="let w of listWeapons" value="{{ w.id }}">{{ w.name }}</option>
         </select>
       </div>
-      <span
-        innerHtml="{{ 'CREATION.INDICS.ATTACKBONUS' | translate }} : {{ weapon01.attackBonus || '-' }} / {{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{ weapon01.attackBonus || '-' }}"></span>
     </div>
     <div class="creation-element">
-      <span>Arme (optionnel) : </span>
+      <span>{{ "CREATION.INDICS.WEAPON" | translate }} : </span>
       <div class="dropdown">
         <select class="dropdown-select" value="{{ weapon02.id }}" (change)="changeWeapon02($event.target)">
           <option value="0"></option>
           <option *ngFor="let weapon of listWeapons" value="{{ weapon.id }}">{{ weapon.name }}</option>
         </select>
       </div>
-      <span
-        innerHtml="{{ 'CREATION.INDICS.ATTACKBONUS' | translate }} : {{ weapon02.attackBonus || '-' }} / {{ 'CREATION.INDICS.DEFENCEBONUS' | translate }} : {{ weapon02.attackBonus || '-' }}"></span>
     </div>
   </div>
   <!--------------------------------------------------------------------------------------------------------------->
