Fix(popup): Fix the display of the popup

--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -4,7 +4,7 @@
   imgRight="assets/images/creation/perso_right.png">
 </head-creation>
 
-<popup *ngIf="help" text="{{ help }}" (onClosePopup)="closePopup()"></popup>
+<creation-popup *ngIf="help" [text]="help" (onClosePopup)="closePopup()"></creation-popup>
 
 <!--------------------------------------------------------------------------------------------------------------->
 <!------------                                IMPORT                                                ------------->
